MANY CENTRALITY CSVs

--- a/Implementation/AnalysisCode.ipynb
+++ b/Implementation/AnalysisCode.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 9,
    "metadata": {
     "id": "BpN_FBp9RG70",
     "outputId": "442d24cc-f3c8-42c5-ceb7-1eed763b01f7"
@@ -93,7 +93,7 @@
     }
    ],
    "source": [
-    "cancer2_csv, cancer2_graph = data_graph('../data/Breast-Normal.csv',\",\")"
+    "cancer2_csv, cancer2_graph = data_graph('../data/Bone-Normal.csv',\",\")"
    ]
   },
   {
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "id": "CuyxJKyvRG75"
    },
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "id": "ToG6DAowRG76"
    },
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "id": "7w_wUlxrRG77"
    },
@@ -798,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "id": "8HKRmILrRG78"
    },
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "id": "_9ZR3sIhRG78"
    },
@@ -1481,7 +1481,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1228, 2)\n",
+      "          From      To  Weight\n",
+      "0        4EBP1    AKT1       1\n",
+      "1        4EBP1   EIF4E       1\n",
+      "2        4EBP1  MAPK14       1\n",
+      "3  14-3-3-zeta    AKT1       1\n",
+      "4  14-3-3-zeta     BAD       1\n"
+     ]
+    }
+   ],
+   "source": [
+    "cancer2_csv, cancer2_graph = data_graph('../data/Kidney-Normal.csv',\",\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1489,27 +1512,27 @@
      "output_type": "stream",
      "text": [
       "Degree\n",
-      "('SMAD2', 0.1814814814814815)\n",
-      "('FYN', 0.17407407407407408)\n",
-      "('SMAD3', 0.17222222222222222)\n",
-      "('STAT5A', 0.17037037037037037)\n",
-      "('STAT1', 0.17037037037037037)\n",
-      "('ERK1', 0.14444444444444446)\n",
-      "('LYN', 0.12222222222222223)\n",
-      "('RAF1', 0.12037037037037038)\n",
-      "('GRB2', 0.12037037037037038)\n",
-      "('EGFR', 0.12037037037037038)\n",
+      "('STAT1', 0.17940199335548174)\n",
+      "('CREBBP', 0.17607973421926912)\n",
+      "('FYN', 0.17275747508305647)\n",
+      "('SMAD2', 0.16943521594684385)\n",
+      "('JAK2', 0.15614617940199335)\n",
+      "('RELA', 0.11627906976744186)\n",
+      "('STAT3', 0.11627906976744186)\n",
+      "('CSK', 0.10963455149501661)\n",
+      "('EGFR', 0.09634551495016612)\n",
+      "('BTK', 0.09302325581395349)\n",
       "Eigen Vector centrality\n",
-      "('FYN', 0.19506198242424283)\n",
-      "('STAT1', 0.19466065881579486)\n",
-      "('STAT5A', 0.194092825450615)\n",
-      "('LYN', 0.16565694932948)\n",
-      "('CSK', 0.16561232899678574)\n",
-      "('CBL', 0.16219626943861795)\n",
-      "('KIT', 0.16189297473279252)\n",
-      "('GRB2', 0.1613574589375679)\n",
-      "('STAT3', 0.16060517574965685)\n",
-      "('TEC', 0.1567665848344549)\n",
+      "('STAT1', 0.2824690095844933)\n",
+      "('FYN', 0.2549824615427622)\n",
+      "('JAK2', 0.24579758956272876)\n",
+      "('STAT3', 0.2199157183375137)\n",
+      "('CSK', 0.2067109744798508)\n",
+      "('CREBBP', 0.19840405527783467)\n",
+      "('JAK1', 0.18738367682936377)\n",
+      "('GRB2', 0.1844395492696375)\n",
+      "('CRKL', 0.17656215502307704)\n",
+      "('BTK', 0.17589886562185922)\n",
       "closeness centrality \n",
       "Betweenness centrality \n",
       "Katz centrality\n"
@@ -1517,11 +1540,11 @@
     }
    ],
    "source": [
-    "c2c1, c2c2  = degreeCentrality(cancer2_graph, 'BreastCancer')\n",
-    "c2c3 = eigenVectorCentrality(cancer2_graph, 'BreastCancer')\n",
-    "c2c6 = closenessCentrality(cancer2_graph, 'BreastCancer')\n",
-    "c2c7 = betweenessCentrality(cancer2_graph, 'BreastCancer')\n",
-    "c2c6 = khatzCentrality(cancer2_graph, 'BreastCancer')"
+    "c2c1, c2c2  = degreeCentrality(cancer2_graph, 'KidneyNormal')\n",
+    "c2c3 = eigenVectorCentrality(cancer2_graph, 'LiverNormal')\n",
+    "c2c6 = closenessCentrality(cancer2_graph, 'LiverNormal')\n",
+    "c2c7 = betweenessCentrality(cancer2_graph, 'LiverNormal')\n",
+    "c2c6 = khatzCentrality(cancer2_graph, 'LiverNormal')"
    ]
   },
   {
