MANY CENTRALITY CSVs again

--- a/Implementation/AnalysisCode.ipynb
+++ b/Implementation/AnalysisCode.ipynb
@@ -1481,7 +1481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1499,12 +1499,12 @@
     }
    ],
    "source": [
-    "cancer2_csv, cancer2_graph = data_graph('../data/Kidney-Normal.csv',\",\")"
+    "cancer2_csv, cancer2_graph = data_graph('../data/Liver-Normal.csv',\",\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1523,28 +1523,42 @@
       "('EGFR', 0.09634551495016612)\n",
       "('BTK', 0.09302325581395349)\n",
       "Eigen Vector centrality\n",
-      "('STAT1', 0.2824690095844933)\n",
-      "('FYN', 0.2549824615427622)\n",
-      "('JAK2', 0.24579758956272876)\n",
-      "('STAT3', 0.2199157183375137)\n",
-      "('CSK', 0.2067109744798508)\n",
-      "('CREBBP', 0.19840405527783467)\n",
-      "('JAK1', 0.18738367682936377)\n",
-      "('GRB2', 0.1844395492696375)\n",
-      "('CRKL', 0.17656215502307704)\n",
-      "('BTK', 0.17589886562185922)\n",
+      "('STAT1', 0.28246900958449345)\n",
+      "('FYN', 0.2549824615427621)\n",
+      "('JAK2', 0.24579758956272857)\n",
+      "('STAT3', 0.21991571833751364)\n",
+      "('CSK', 0.20671097447985068)\n",
+      "('CREBBP', 0.19840405527783475)\n",
+      "('JAK1', 0.1873836768293636)\n",
+      "('GRB2', 0.18443954926963735)\n",
+      "('CRKL', 0.17656215502307687)\n",
+      "('BTK', 0.17589886562185908)\n",
       "closeness centrality \n",
       "Betweenness centrality \n",
-      "Katz centrality\n"
+      "Katz centrality\n",
+      "13852.0\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "too many values to unpack (expected 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-28-6f278fa941ec>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mc2c7\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbetweenessCentrality\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcancer2_graph\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'LiverNormal'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mc2c6\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mkhatzCentrality\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcancer2_graph\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'LiverNormal'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mc1c4\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mc1c5\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0menhancedCentrality\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcancer2_graph\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'LiverNormal'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-4-29ffb6f82663>\u001b[0m in \u001b[0;36menhancedCentrality\u001b[1;34m(graph, name)\u001b[0m\n\u001b[0;32m     42\u001b[0m       \u001b[0menhanced_degree_centrality\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mtemp\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     43\u001b[0m   \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 44\u001b[1;33m     \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mj\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdegree_centrality_nodes\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     45\u001b[0m       \u001b[0mtemp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mfloat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmax_value\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mj\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mfloat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mclustering_array\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m/\u001b[0m\u001b[0mfloat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     46\u001b[0m       \u001b[0menhanced_degree_centrality\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mtemp\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: too many values to unpack (expected 2)"
      ]
     }
    ],
    "source": [
-    "c2c1, c2c2  = degreeCentrality(cancer2_graph, 'KidneyNormal')\n",
+    "c2c1, c2c2  = degreeCentrality(cancer2_graph, 'LiverNormal')\n",
     "c2c3 = eigenVectorCentrality(cancer2_graph, 'LiverNormal')\n",
     "c2c6 = closenessCentrality(cancer2_graph, 'LiverNormal')\n",
     "c2c7 = betweenessCentrality(cancer2_graph, 'LiverNormal')\n",
-    "c2c6 = khatzCentrality(cancer2_graph, 'LiverNormal')"
+    "c2c6 = khatzCentrality(cancer2_graph, 'LiverNormal')\n",
+    "c1c4, c1c5 = enhancedCentrality(cancer2_graph, 'LiverNormal')"
    ]
   },
   {
