--- a/common.ipynb
+++ b/common.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n"
    ]
   },
   {
@@ -18,7 +18,7 @@
    "outputs": [],
    "source": [
     "bone = pd.read_csv('Implementation\\LabelledData\\Bone-Cancer.csv')\n",
-    "bone_cancer = bone[bone['Label']==1]['Name']"
+    "bone_cancer = bone[bone['Label'] == 1]['Name']\n"
    ]
   },
   {
@@ -28,7 +28,7 @@
    "outputs": [],
    "source": [
     "breast = pd.read_csv('Implementation\\LabelledData\\Breast-Cancer.csv')\n",
-    "breast_cancer = breast[breast['Label']==1]['Name']"
+    "breast_cancer = breast[breast['Label'] == 1]['Name']\n"
    ]
   },
   {
@@ -38,7 +38,7 @@
    "outputs": [],
    "source": [
     "colon = pd.read_csv('Implementation\\LabelledData\\Colon-Cancer.csv')\n",
-    "colon_cancer = colon[colon['Label']==1]['Name']"
+    "colon_cancer = colon[colon['Label'] == 1]['Name']\n"
    ]
   },
   {
@@ -48,7 +48,7 @@
    "outputs": [],
    "source": [
     "kidney = pd.read_csv('Implementation\\LabelledData\\Kidney-Cancer.csv')\n",
-    "kidney_cancer = kidney[kidney['Label']==1]['Name']"
+    "kidney_cancer = kidney[kidney['Label'] == 1]['Name']\n"
    ]
   },
   {
@@ -58,7 +58,7 @@
    "outputs": [],
    "source": [
     "liver = pd.read_csv('Implementation\\LabelledData\\Liver-Cancer.csv')\n",
-    "liver_cancer = liver[liver['Label']==1]['Name']"
+    "liver_cancer = liver[liver['Label'] == 1]['Name']\n"
    ]
   },
   {
@@ -83,7 +83,7 @@
     "colon_protein = set(np.unique(colon_cancer))\n",
     "kidney_protein = set(np.unique(kidney_cancer))\n",
     "liver_protein = set(np.unique(liver_cancer))\n",
-    "len(bone_protein), len(breast_protein), len(colon_protein), len(kidney_protein), len(liver_protein)"
+    "len(bone_protein), len(breast_protein), len(colon_protein), len(kidney_protein), len(liver_protein)\n"
    ]
   },
   {
@@ -103,7 +103,8 @@
     }
    ],
    "source": [
-    "len(bone_protein.intersection(breast_protein, colon_protein, kidney_protein, liver_protein))"
+    "len(bone_protein.intersection(breast_protein,\n",
+    "    colon_protein, kidney_protein, liver_protein))\n"
    ]
   },
   {
@@ -147,8 +148,9 @@
     }
    ],
    "source": [
-    "common_proteins = list(bone_protein.intersection(breast_protein, colon_protein, kidney_protein, liver_protein))\n",
-    "common_proteins"
+    "common_proteins = list(bone_protein.intersection(\n",
+    "    breast_protein, colon_protein, kidney_protein, liver_protein))\n",
+    "common_proteins\n"
    ]
   },
   {
@@ -158,53 +160,66 @@
    "outputs": [],
    "source": [
     "def plotProteinVals(bone, breast, colon, kidney, liver, protein_name):\n",
-    "    protein = pd.DataFrame(columns=['Type', 'Betweenness', 'Degree', 'Closeness', 'EigenValueC', 'Katz', 'ClusteringCoef'])\n",
+    "    protein = pd.DataFrame(columns=[\n",
+    "                           'Type', 'Betweenness', 'Degree', 'Closeness', 'EigenValueC', 'Katz', 'ClusteringCoef'])\n",
     "\n",
     "    truth_value = []\n",
     "    for i in range(len(bone)):\n",
     "        truth_value.append(list(bone['Name'])[i] in common_proteins)\n",
-    "    protein = protein.append(bone[truth_value][bone[truth_value]['Name']==protein_name][['Betweenness', 'Degree', 'Closeness', 'EigenValueC', 'Katz', 'ClusteringCoef']], ignore_index=True)\n",
+    "    protein = protein.append(bone[truth_value][bone[truth_value]['Name'] == protein_name][[\n",
+    "                             'Betweenness', 'Degree', 'Closeness', 'EigenValueC', 'Katz', 'ClusteringCoef']], ignore_index=True)\n",
     "    protein.loc[0, 'Type'] = 'Bone'\n",
-    "    \n",
+    "\n",
     "    truth_value = []\n",
     "    for i in range(len(breast)):\n",
     "        truth_value.append(list(breast['Name'])[i] in common_proteins)\n",
-    "    protein = protein.append(breast[truth_value][breast[truth_value]['Name']==protein_name][['Betweenness', 'Degree', 'Closeness', 'EigenValueC', 'Katz', 'ClusteringCoef']], ignore_index=True)\n",
+    "    protein = protein.append(breast[truth_value][breast[truth_value]['Name'] == protein_name][[\n",
+    "                             'Betweenness', 'Degree', 'Closeness', 'EigenValueC', 'Katz', 'ClusteringCoef']], ignore_index=True)\n",
     "    protein.loc[1, 'Type'] = 'Breast'\n",
-    "    \n",
+    "\n",
     "    truth_value = []\n",
     "    for i in range(len(colon)):\n",
     "        truth_value.append(list(colon['Name'])[i] in common_proteins)\n",
-    "    protein = protein.append(colon[truth_value][colon[truth_value]['Name']==protein_name][['Betweenness', 'Degree', 'Closeness', 'EigenValueC', 'Katz', 'ClusteringCoef']], ignore_index=True)\n",
+    "    protein = protein.append(colon[truth_value][colon[truth_value]['Name'] == protein_name][[\n",
+    "                             'Betweenness', 'Degree', 'Closeness', 'EigenValueC', 'Katz', 'ClusteringCoef']], ignore_index=True)\n",
     "    protein.loc[2, 'Type'] = 'Colon'\n",
-    "    \n",
+    "\n",
     "    truth_value = []\n",
     "    for i in range(len(kidney)):\n",
     "        truth_value.append(list(kidney['Name'])[i] in common_proteins)\n",
-    "    protein = protein.append(kidney[truth_value][kidney[truth_value]['Name']==protein_name][['Betweenness', 'Degree', 'Closeness', 'EigenValueC', 'Katz', 'ClusteringCoef']], ignore_index=True)\n",
+    "    protein = protein.append(kidney[truth_value][kidney[truth_value]['Name'] == protein_name][[\n",
+    "                             'Betweenness', 'Degree', 'Closeness', 'EigenValueC', 'Katz', 'ClusteringCoef']], ignore_index=True)\n",
     "    protein.loc[3, 'Type'] = 'Kidney'\n",
-    "    \n",
+    "\n",
     "    truth_value = []\n",
     "    for i in range(len(liver)):\n",
     "        truth_value.append(list(liver['Name'])[i] in common_proteins)\n",
-    "    protein = protein.append(liver[truth_value][liver[truth_value]['Name']==protein_name][['Betweenness', 'Degree', 'Closeness', 'EigenValueC', 'Katz', 'ClusteringCoef']], ignore_index=True)\n",
+    "    protein = protein.append(liver[truth_value][liver[truth_value]['Name'] == protein_name][[\n",
+    "                             'Betweenness', 'Degree', 'Closeness', 'EigenValueC', 'Katz', 'ClusteringCoef']], ignore_index=True)\n",
     "    protein.loc[4, 'Type'] = 'Liver'\n",
-    "    \n",
+    "\n",
     "    print(protein)\n",
     "\n",
-    "    protein.plot(x='Type', y=['Betweenness', 'Degree', 'Closeness', 'EigenValueC', 'Katz', 'ClusteringCoef'], kind='bar', figsize=[10,8], colormap='Set3', title=protein_name)\n",
+    "    protein.plot(x='Type', y=['Betweenness', 'Degree', 'Closeness', 'EigenValueC', 'Katz',\n",
+    "                 'ClusteringCoef'], kind='bar', figsize=[10, 8], colormap='Set3', title=protein_name)\n",
     "    plt.show()\n",
-    "    protein.plot(x='Type', y=['Betweenness'], kind='bar', figsize=[10,8], colormap='Set3', title='Betweenness for '+protein_name)\n",
+    "    protein.plot(x='Type', y=['Betweenness'], kind='bar', figsize=[\n",
+    "                 10, 8], colormap='Set3', title='Betweenness for '+protein_name)\n",
     "    plt.show()\n",
-    "    protein.plot(x='Type', y=['Degree'], kind='bar', figsize=[10,8], colormap='Set3', title='Degree for '+protein_name)\n",
+    "    protein.plot(x='Type', y=['Degree'], kind='bar', figsize=[\n",
+    "                 10, 8], colormap='Set3', title='Degree for '+protein_name)\n",
     "    plt.show()\n",
-    "    protein.plot(x='Type', y=['Closeness'], kind='bar', figsize=[10,8], colormap='Set3', title='Closeness for '+protein_name)\n",
+    "    protein.plot(x='Type', y=['Closeness'], kind='bar', figsize=[\n",
+    "                 10, 8], colormap='Set3', title='Closeness for '+protein_name)\n",
     "    plt.show()\n",
-    "    protein.plot(x='Type', y=['EigenValueC'], kind='bar', figsize=[10,8], colormap='Set3', title='Eigenvalue Clustering for '+protein_name)\n",
+    "    protein.plot(x='Type', y=['EigenValueC'], kind='bar', figsize=[\n",
+    "                 10, 8], colormap='Set3', title='Eigenvalue Clustering for '+protein_name)\n",
     "    plt.show()\n",
-    "    protein.plot(x='Type', y=['Katz'], kind='bar', figsize=[10,8], colormap='Set3', title='Katz Centrality for '+protein_name)\n",
+    "    protein.plot(x='Type', y=['Katz'], kind='bar', figsize=[\n",
+    "                 10, 8], colormap='Set3', title='Katz Centrality for '+protein_name)\n",
     "    plt.show()\n",
-    "    protein.plot(x='Type', y=['ClusteringCoef'], kind='bar', figsize=[10,8], colormap='Set3', title='Clustering Coefficient for '+protein_name)\n",
+    "    protein.plot(x='Type', y=['ClusteringCoef'], kind='bar', figsize=[\n",
+    "                 10, 8], colormap='Set3', title='Clustering Coefficient for '+protein_name)\n",
     "    plt.show()\n"
    ]
   },
@@ -318,7 +333,7 @@
     }
    ],
    "source": [
-    "plotProteinVals(bone, breast, colon, kidney, liver, 'AKT1')"
+    "plotProteinVals(bone, breast, colon, kidney, liver, 'AKT1')\n"
    ]
   },
   {
@@ -431,7 +446,7 @@
     }
    ],
    "source": [
-    "plotProteinVals(bone, breast, colon, kidney, liver, 'CCND1')"
+    "plotProteinVals(bone, breast, colon, kidney, liver, 'CCND1')\n"
    ]
   }
  ],
